--- a/src/app/components/blogs/blogs.component.html
+++ b/src/app/components/blogs/blogs.component.html
@@ -34,4 +34,16 @@
           </div>
        </div>
     </div>
+    <div class="craft">
+      <div class="container">
+        <div class="row">
+           <div class="col-md-4">
+           <h2>Let's craft <br>design together!</h2>
+        </div>
+           <div class="button">
+               <div class="btn-white" routerLink="/contact-us">Let's Talk</div>
+           </div>
+      </div>
+      </div>
+   </div>
  </div>
