--- a/src/app/components/career/career.component.html
+++ b/src/app/components/career/career.component.html
@@ -3,7 +3,7 @@
        <div class="container">
           <div class="career-layout1">
              <h1>Drop in your detail <br> if you want to be <span> a part of us</span> </h1>
-             <h6>Candidates can share their resume<br> with portfolio to  <span>work@uxmint.in</span></h6>
+             <h4>Candidates can share their resume with portfolio to  <span>work@uxmint.in</span></h4>
           </div>
        </div>
     </div>
@@ -12,9 +12,9 @@
           <div class="career-design">
              <h1>Open opportunities</h1>
              <mat-card> 
-             <div class="row designer ">
-                <div class="col-md-4">
-                   <h2> USER EXPERIENCE DESIGNER </h2>
+             <div class="row designer">
+                <div class="col-md-3">
+                   <h2> UX Designer </h2>
                   <h6>Fulltime </h6> 
                 </div>
                 <div class="col-md-3 only-mobile">
@@ -25,7 +25,7 @@
                 </div>
                 <div class="col-md-2">
                   <div class="button">
-                     <div class="btn btn-white" routerLink="/career/ui/job-description">View</div>
+                     <div class="btn btnn" routerLink="/career/ui/job-description">View</div>
                   </div>
                 </div>
              </div>
