--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -80,10 +80,10 @@
             <h5>Follow Us On</h5>
             <ul>
                 <li>
-                    <a routerLink="https://www.linkedin.com/school/uxmint"><img src="https://img.icons8.com/small/50/FFFFFF/linkedin.png"/></a>
+                    <a href="https://www.linkedin.com/school/uxmint"> <img src="./assets/images/linkedin1.svg"></a>
                 </li>
                 <li>
-                    <a routerLink="https://medium.com/uxmint"><img src="https://img.icons8.com/small/50/FFFFFF/medium.png"/></a>
+                    <a href="https://medium.com/uxmint"> <img src="./assets/images/medium1.svg" class="medium"></a>
                 </li>
             </ul>
         </div>
