--- a/src/app/components/services/services.component.html
+++ b/src/app/components/services/services.component.html
@@ -6,6 +6,7 @@
             <h3><a>let us know</a> what you are looking for</h3>
         </div>
     </div>
+    <div class="hr"></div>
     <div class="types">
         <div class="container">
             <div class="d-flex">
