--- a/src/app/components/works/works.component.html
+++ b/src/app/components/works/works.component.html
@@ -15,7 +15,7 @@
                         <h2>15 +</h2>
                      </div>
                      <div class="col-md-3">
-                        <h4>satisfied clients</h4>
+                        <h4>Satisfied Clients</h4>
                      </div>
                   </div>
                  </div>
@@ -283,7 +283,7 @@
            <h2>Let's craft design together!</h2>
         </div>
            <div class="button">
-               <div class="btn-white">Let's Talk</div>
+               <div class="btn-white" routerLink="/contact-us">Let's Talk</div>
            </div>
       </div>
       </div>
