--- a/src/app/modules/career/components/graphic-design-description/graphic-design-description.component.scss
+++ b/src/app/modules/career/components/graphic-design-description/graphic-design-description.component.scss
@@ -4,25 +4,23 @@
 
 .career-ui{
     .banner{
-        position: relative;
         height: 770px;
         padding: 245px 0px;
-        background-color: #995BEB;
         h1{
             font-size: 56px;
-            color: #000000;
+            color: #3B3B3B;
             font-family: Baskerville;
             span{
-                color: #FFFFFF;
+                color: #C3343C;
             }
         }
-        h6{
-            font-size: 36px;
-            color: #282829;
+        h4{
+            font-size: 26px;
+            color: #3B3B3B;
             padding-top: 25px;
             font-family: Muli;
             span{
-                color: #FFFFFF;
+                color: #C3343C;
                 text-decoration: underline;
             }
         }
