--- a/src/app/modules/career/components/job-apply/job-apply.component.html
+++ b/src/app/modules/career/components/job-apply/job-apply.component.html
@@ -3,7 +3,7 @@
        <div class="container">
           <div class="careerux-layout1 ">
              <h1>Drop in your detail <br> if you want to be <span> a part of us</span> </h1>
-             <h6>Candidates can share their resume<br> with portfolio to  <span>work@uxmint.in</span></h6>
+             <h4>Candidates can share their resume with portfolio to  <span>work@uxmint.in</span></h4>
           </div>
        </div>
     </div>
@@ -18,7 +18,7 @@
                               <div class="field-group">
                                   <span>Job Title</span>
                                   <mat-form-field appearance="outline">
-                                      <input matInput type="text" placeholder="" formControlName="title">
+                                      <input matInput type="text" placeholder="Ex: UI Developer" formControlName="title">
                                       <mat-error *ngIf="hasError('title','required')">Please enter Title</mat-error>
                                   </mat-form-field>
                               </div>
@@ -37,7 +37,7 @@
                               <div class="field-group">
                                   <span>Linkedin URL</span>
                                   <mat-form-field appearance="outline">
-                                      <input matInput type="text" placeholder="" formControlName="url">
+                                      <input matInput type="text" placeholder="Enter URL" formControlName="url">
                                       <mat-error *ngIf="hasError('url','required')">Please enter URL</mat-error>
                                   </mat-form-field>
                               </div>
