--- a/src/app/modules/career/components/ui-job-description/ui-job-description.component.html
+++ b/src/app/modules/career/components/ui-job-description/ui-job-description.component.html
@@ -2,7 +2,7 @@
     <div class="banner only-mobile">
        <div class="container">
              <h1>Drop in your detail <br> if you want to be <span> a part of us</span> </h1>
-             <h6>Candidates can share their resume<br> with portfolio to  <span>work@uxmint.in</span></h6>
+             <h4>Candidates can share their resume with portfolio to  <span>work@uxmint.in</span></h4>
           
        </div>
     </div>
@@ -21,7 +21,7 @@
                    </div>
                 </div>
                 <div class="col-md-7 description">
-                   <h6>Job Description</h6>
+                   <h1>Job Description</h1>
                    <p>
                       - Create styleguide, themes, layouts for different interfaces<br>
                       - Work in coherence with Brand Guidelines<br>
