--- a/src/app/modules/services/components/end-to-end-development/end-to-end-development.component.html
+++ b/src/app/modules/services/components/end-to-end-development/end-to-end-development.component.html
@@ -20,7 +20,7 @@
                 </div>
             </div>
             <div class="col-md-6 right-layout">
-                <img src="./assets/images/services/image.png">
+                <img src="./assets/images/services/Asset14.svg">
             </div>
         </div>
     </div>
@@ -46,6 +46,30 @@
                     <div class="list">
                         <img src="./assets/images/services/icon-25.svg"><span>Scalability</span>
                     </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="service-layout4">
+        <div class="container">
+        <div class="row">
+            <div class="col-md-4">
+                    <h3>Understanding the system</h3>
+            </div>
+            <div class="col-md-8">
+                    <p>We draw the System Roadmap based on the Design Strategy for a better Usability. In this approach we have a clear roadmap that encompasses multiple factors like Defined User Base, quantum & type of data. This set-up allows the well defined ecosystem to boost the performance, enhance scalability to alignment with the Product Vision, also get started with minimal fuss.</p>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="service-layout5">
+        <div class="container">
+        <div class="row">
+            <div class="col-md-4">
+                    <h3>Choosing the right tech stack</h3>
+            </div>
+            <div class="col-md-8">
+                    <p>We choose the right Tech Stack based on the detailed Analysis of User Behaviour and the Business needs in terms of, ease of use scalability interoperability with standardization adaptability with emerging trends integration with array of UI platforms (Responsive, Android, iOS & Wearables).</p>
                 </div>
             </div>
         </div>
