--- a/src/app/modules/services/components/interface-design/interface-design.component.html
+++ b/src/app/modules/services/components/interface-design/interface-design.component.html
@@ -22,7 +22,7 @@
                 </div>
             </div>
             <div class="col-md-6 right-layout">
-                <img src="./assets/images/services/image.png">
+              <img src="./assets/images/services/Asset12.svg">
             </div>
         </div>
     </div>
@@ -58,6 +58,18 @@
             </div>
         </div>
     </div>
+    <div class="service-layout4">
+      <div class="container">
+      <div class="row">
+          <div class="col-md-4">
+                  <h3>First impression of a product Matters a lot</h3>
+          </div>
+          <div class="col-md-8">
+                 <p>Before even users start using a product, they perceive it. A percentage of their acceptance of the application is based on the visuals they see. Aesthetic and minimal design will retain customers. UI can be created & enhanced after wireframe phase, based on user testing feed back, if the product has not been catching up with the trend, to have a holistic design system or a visual language.</p>
+              </div>
+          </div>
+      </div>
+  </div>
     <div class="service-layout3">
         <div class="container">
             <div class="d-flex">
