--- a/src/app/modules/work/components/event-management/event-management.component.html
+++ b/src/app/modules/work/components/event-management/event-management.component.html
@@ -112,10 +112,10 @@
         </div>
     </div>
     <div class="image-event">
-        <img src="./assets/images/works/eventmanagement1.png">
+        <img src="./assets/images/works/management1.png">
     </div>
     <div class="image-event">
-        <img src="./assets/images/works/eventmanagement2.png">
+        <img src="./assets/images/works/management2.png">
     </div>
     <div class="image-event">
         <img src="./assets/images/works/eventmanagement3.png">
@@ -126,7 +126,7 @@
                 <div class="col-md-8">
                     <h5>Logo Story</h5>
                     <h6>Rebranding to match with the vision of the business</h6>
-                    <p>Balloons depict celebration, for all kinds of events. Right from Birthdays, Parties, Weddings, etc And because event management is all about gathering at a place to celebrate. Location plays a vital role</p>
+                    <p>Balloons depict celebration, for all kinds of events. Right from Birthdays,<br> Parties, Weddings, etc And because event management is all about <br>gathering at a place to celebrate. Location plays a vital role</p>
                 </div>
                 <div class="col-md-4">
                     <img src="./assets/images/works/eventmanagement4.png">
@@ -148,7 +148,7 @@
             <div class="col-md-6 left">
                 <h2>Other Case Studies</h2>
                 <div class="button">
-                    <div class="btn btnn">See All Works</div>
+                    <div class="btn btnn" routerLink="/works">See All Works</div>
                 </div>
             </div>
             <div class="col-md-6 right">
@@ -178,7 +178,7 @@
              <h2>Let's craft design together!</h2>
           </div>
              <div class="button">
-                 <div class="btn-white">Let's Talk</div>
+                 <div class="btn-white" routerLink="/contact-us">Let's Talk</div>
              </div>
         </div>
         </div>
