--- a/src/app/modules/work/components/health-care/health-care.component.html
+++ b/src/app/modules/work/components/health-care/health-care.component.html
@@ -5,7 +5,7 @@
                 <div class="col-md-4 ordertwo">
                     <div class="banner-header">
                         <h2>To adapt organic food as a Lifestyle</h2>
-                        <h6>UX <span>. UI .</span><span> Mobile</span></h6>
+                        <h6>UX <span>. UI .</span><span> Mobile .</span><span>  B2C</span></h6>
                     </div>
                 </div>
                 <div class="col-md-1"></div>
@@ -83,19 +83,19 @@
                 <div class="needs">
                     <div class="needs-right">
                        <h6>Needs</h6>
-                       <p>Weekly pre-planned vegetable + groceries list for the whole family</p>
-                       <p>A place to buy goods in fast and easy way</p>
-                       <p>A Food Chart to avoid "daily new recipe" confusion</p>
-                       <p>Health benefits of the Goods and Recipes</p>
-                       <p>Recipe suggestions based on Taste, Quality, Time, Health</p>
+                       <p>- Weekly pre-planned vegetable + groceries list for the whole family</p>
+                       <p>- A place to buy goods in fast and easy way</p>
+                       <p>- A Food Chart to avoid "daily new recipe" confusion</p>
+                       <p>- Health benefits of the Goods and Recipes</p>
+                       <p>- Recipe suggestions based on Taste, Quality, Time, Health</p>
                     </div>
                     <div class="needs-right">
                         <h6>Challenges</h6>
-                        <p>Planning what vegetables to buy for the week</p>
-                        <p>Identifying the right authentic shops that sells quality products</p>
-                        <p>Don’t have knowledge about how much quantity to buy for family</p>
-                        <p>Finds it difficult to do all the purchases all alone</p>
-                        <p>Difficult to find and cook new and tasty dishes every now and then</p>
+                        <p>- Planning what vegetables to buy for the week</p>
+                        <p>- Identifying the right authentic shops that sells quality products</p>
+                        <p>- Don’t have knowledge about how much quantity to buy for family</p>
+                        <p>- Finds it difficult to do all the purchases all alone</p>
+                        <p>- Difficult to find and cook new and tasty dishes every now and then</p>
                     </div>
                  </div>
             </div>
@@ -169,7 +169,7 @@
     <div class="work-layout">
         <div class="container">
             <div class="row">
-                <div class="col-md-4">
+                <div class="col-md-4 ">
                     <h6>High Fidelity Prototype</h6>
                     <p>User testing were done and the designs were further iterated to hit the market with less friction for users</p>
                 </div>
@@ -184,7 +184,7 @@
             <div class="col-md-6 left">
                 <h2>Other Case Studies</h2>
                 <div class="button">
-                    <div class="btn btnn">See All Works</div>
+                    <div class="btn btnn" routerLink="/works">See All Works</div>
                 </div>
             </div>
             <div class="col-md-6 right">
@@ -214,7 +214,7 @@
             <h2>Let's craft design together!</h2>
          </div>
             <div class="button">
-                <div class="btn-white">Let's Talk</div>
+                <div class="btn-white" routerLink="/contact-us">Let's Talk</div>
             </div>
        </div>
        </div>
