--- a/src/app/modules/work/components/marketing/marketing.component.html
+++ b/src/app/modules/work/components/marketing/marketing.component.html
@@ -79,28 +79,28 @@
                 <div class="needs">
                     <div class="needs-right">
                        <h6>Needs</h6>
-                       <p> Fast and Simple Design</p>
-                       <p> Track Activity and Daily Tasks</p>
-                       <p> Motivation & Appreciation</p>
-                       <p> Reliable Platform</p>
-                       <p> Interactive Environment</p>
-                       <p> Getting Testimonials</p>
-                       <p> Social Status</p>
+                       <p>- Fast and Simple Design</p>
+                       <p>- Track Activity and Daily Tasks</p>
+                       <p>- Motivation & Appreciation</p>
+                       <p>- Reliable Platform</p>
+                       <p>- Interactive Environment</p>
+                       <p>- Getting Testimonials</p>
+                       <p>- Social Status</p>
                     </div>
                     <div class="needs-right">
                         <h6>Challenges</h6>
-                        <p> Getting Testimonials</p>
-                        <p> Scattered Management</p>
-                        <p> Manual Work</p>
-                        <p> Losing Track of Customers</p>
-                        <p> Feedback Mechanism</p>
+                        <p>- Getting Testimonials</p>
+                        <p>- Scattered Management</p>
+                        <p>- Manual Work</p>
+                        <p>- Losing Track of Customers</p>
+                        <p>- Feedback Mechanism</p>
                     </div>
                     <div class="needs-right">
                         <h6>Discovery & Analysis</h6>
-                        <p> We started from "Zero". Knowing how word of mouth spreads was worth probing the chapters of history. Discoveries were quite interesting based on why people follow certain behaviours of promoting Product/services organically instead of doing it online.- Reliable Platform</p>
-                        <p> Interactive environment</p>
-                        <p> Getting Testimonials</p>
-                        <p> Social Status</p>
+                        <p>- We started from "Zero". Knowing how word of mouth spreads was worth probing the chapters of history. Discoveries were quite interesting based on why people follow certain behaviours of promoting Product/services organically instead of doing it online.- Reliable Platform</p>
+                        <p>- Interactive environment</p>
+                        <p>- Getting Testimonials</p>
+                        <p>- Social Status</p>
                     </div>
                  </div>
             </div>
@@ -132,7 +132,7 @@
             <div class="col-md-6 left">
                 <h2>Other Case Studies</h2>
                 <div class="button">
-                    <div class="btn btnn">See All Works</div>
+                    <div class="btn btnn" routerLink="/works">See All Works</div>
                 </div>
             </div>
             <div class="col-md-6 right">
@@ -155,4 +155,16 @@
             </div>
         </div>
     </div>
+    <div class="craft">
+        <div class="container">
+          <div class="row">
+             <div class="col-md-4">
+             <h2>Let's craft design together!</h2>
+          </div>
+             <div class="button">
+                 <div class="btn-white" routerLink="/contact-us">Let's Talk</div>
+             </div>
+        </div>
+        </div>
+     </div>
 </div>
