--- a/src/app/modules/work/components/networking/networking.component.html
+++ b/src/app/modules/work/components/networking/networking.component.html
@@ -79,19 +79,19 @@
                 <div class="needs">
                     <div class="needs-right">
                        <h6>Needs</h6>
-                       <p> Promoting online and on-time payment of invoices</p>
-                       <p> Converting existing offline users to online process</p>
-                       <p> Reducing the manual intervention</p>
-                       <p> Avoiding delays in status intimation</p>
-                       <p> Improving customer retention</p>
+                       <p>- Promoting online and on-time payment of invoices</p>
+                       <p>- Converting existing offline users to online process</p>
+                       <p>- Reducing the manual intervention</p>
+                       <p>- Avoiding delays in status intimation</p>
+                       <p>- Improving customer retention</p>
                     </div>
                     <div class="needs-right">
                         <h6>Challenges</h6>
-                        <p> Heavy dependency on Support Team</p>
-                        <p> Delay in communication</p>
-                        <p> Outstanding customer payments</p>
-                        <p> Avoiding cheque payments</p>
-                        <p> Multiple follow-ups to customers on purchase and billing</p>
+                        <p>- Heavy dependency on Support Team</p>
+                        <p>- Delay in communication</p>
+                        <p>- Outstanding customer payments</p>
+                        <p>- Avoiding cheque payments</p>
+                        <p>- Multiple follow-ups to customers on purchase and billing</p>
                     </div>
                  </div>
             </div>
@@ -157,7 +157,7 @@
             <div class="col-md-6 left">
                 <h2>Other Case Studies</h2>
                 <div class="button">
-                    <div class="btn btnn">See All Works</div>
+                    <div class="btn btnn" routerLink="/works">See All Works</div>
                 </div>
             </div>
             <div class="col-md-6 right">
@@ -187,7 +187,7 @@
              <h2>Let's craft design together!</h2>
           </div>
              <div class="button">
-                 <div class="btn-white">Let's Talk</div>
+                 <div class="btn-white" routerLink="/contact-us">Let's Talk</div>
              </div>
         </div>
         </div>
