--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -13,9 +13,22 @@ header{
     margin-left: 22px;
 }
 img{
-    width: 25%;
-    margin-left: -35px;
-    padding-top: 5px;
+    //width: 45%;
+    //transform: scale(0.5);
+    margin-left: -45px;
+    padding-top: 7px;
+}
+.line{
+    border-left: 1px solid #AAAAAA;
+  height: 30px;
+  margin-top: 8px;
+    }
+h2{
+font-family: Muli;
+font-size: 14px;
+color: #000000;
+margin-left: -10px;
+padding-top: 5px;
 }
 .nav-link{
     font-family: Muli;
@@ -30,6 +43,8 @@ img{
     img{
         height: 20px;
         width: auto;
+       margin-left: 0px;
+        margin-top: -5px;
     }
     &::before{
         content: '';
@@ -41,10 +56,21 @@ img{
     }
 }
 @include media-breakpoint-down(sm){
+    .web-only{
+        display: none;
+    }
     img{
         width: 70%;
         margin-left: -24px;
         padding-top: 5px;
+    }
+    .line{
+      height: 30px;
+      margin-top: 8px;
+        }
+    h2{
+    margin-left: -10px;
+    padding-top: 5px;
     }
 }
 footer{
@@ -52,8 +78,10 @@ footer{
     color: #FFFFFF;
     padding: 100px 0px 20px 0px;
     h2{
+        color: #FFFFFF;
         font-size: 20px;
         font-family: GD Sherpa;
+        padding-left: 10px;
     }
     .button{
         margin-top: 40px;
@@ -84,7 +112,7 @@ footer{
            font-family: Muli;
         }
     }
-    hr.line {
+    hr.lines {
         border-top: 1px solid #707070;
       }
       .footer-bottom{
