--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -20,7 +20,7 @@
                </div>
                <div class="col-md-6 step-image">
                    <div class="image">
-                     <img src="./assets/images/home/transformation.png">
+                     <img src="./assets/images/home/transformation.svg">
                    </div>
                   </div>
                </div>
@@ -106,7 +106,7 @@
                    </div>
                    <div class="col-md-3">
                      <div class="image">
-                        <img src="./assets/images/home/arrow.png">
+                        <img src="./assets/images/home/arrow.png" routerLink="services">
                     </div>
                   </div>
                 </div>
@@ -132,7 +132,7 @@
                    </div>
                    <div class="col-md-3">
                      <div class="image">
-                        <img src="./assets/images/home/arrow.png">
+                        <img src="./assets/images/home/arrow.png" routerLink="services">
                     </div>
                   </div>
                 </div>
@@ -160,7 +160,7 @@
                    </div>
                    <div class="col-md-3">
                      <div class="image">
-                        <img src="./assets/images/home/arrow.png">
+                        <img src="./assets/images/home/arrow.png" routerLink="services">
                     </div>
                   </div>
                 </div>
@@ -191,7 +191,7 @@
                    <div class="col-md-2"></div>
                    <div class="col-md-3">
                      <div class="image">
-                        <img src="./assets/images/home/arrow.png">
+                        <img src="./assets/images/home/arrow.png"routerLink="services">
                     </div>
                   </div>
                 </div>
@@ -219,7 +219,7 @@
                    </div>
                    <div class="col-md-3">
                      <div class="image">
-                        <img src="./assets/images/home/arrow.png">
+                        <img src="./assets/images/home/arrow.png" routerLink="services">
                     </div>
                   </div>
                 </div>
@@ -248,7 +248,7 @@
                    </div>
                    <div class="col-md-3">
                      <div class="image">
-                        <img src="./assets/images/home/arrow.png">
+                        <img src="./assets/images/home/arrow.png" routerLink="services">
                     </div>
                   </div>
                 </div>
