--- a/src/app/components/home/home.component.scss
+++ b/src/app/components/home/home.component.scss
@@ -7,11 +7,10 @@
 .home{
     .banner{
         padding-top: 140px;
-        top: -100px;
         position: relative;
         background-color: #E2E2E2;
-        height: 830px;
-        padding: 350px 0px;
+        height: 700px;
+        padding: 200px 0px;
         h2{
             font-size: 48px;
             color: #3B3B3B;
@@ -30,6 +29,7 @@
         }
         @include media-breakpoint-down(md){
             height: 500px;
+            padding: 180px 0px;
             h2{
                 font-size: 24px;
             }
@@ -425,9 +425,14 @@
             border: 2px solid #FFFFFF;
             color: #FCFCFC;
             font-size: 20px;
+            cursor: pointer;
             padding: 10px 20px;
             border-radius: 0px;
             font-family: Muli;
+            &:hover{
+                background-color: #FFFFFF;
+                color: #C3343C;
+            }
         }
         @include media-breakpoint-down(md){
             h2{
