--- a/src/app/modules/career/components/graphic-design-description/graphic-design-description.component.html
+++ b/src/app/modules/career/components/graphic-design-description/graphic-design-description.component.html
@@ -3,7 +3,7 @@
        <div class="container">
           <div class="careerui-layout1 ">
              <h1>Drop in your detail <br> if you want to be <span> a part of us</span> </h1>
-             <h6>Candidates can share their resume<br> with portfolio to  <span>work@uxmint.in</span></h6>
+             <h4>Candidates can share their resume with portfolio to  <span>work@uxmint.in</span></h4>
           </div>
        </div>
     </div>
