--- a/src/app/modules/career/components/ui-job-description/ui-job-description.component.scss
+++ b/src/app/modules/career/components/ui-job-description/ui-job-description.component.scss
@@ -4,26 +4,24 @@
 
 .career-ui{
     .banner{
-        position: relative;
         padding: 245px 0px;
-        background-color: #995BEB;
+        background-color: #D3B1FF;
         height: 770px;
-        margin-top: -100px;
         h1{
             font-size: 56px;
-            color: #000000;
+            color: #3B3B3B;
             font-family: Baskerville;
             span{
-                color: #FFFFFF;
+                color: #C3343C;
             }
         }
-        h6{
-            font-size: 36px;
-            color: #282829;
+        h4{
+            font-size: 26px;
+            color: #3B3B3B;
             padding-top: 25px;
             font-family: Muli;
             span{
-                color: #FFFFFF;
+                color: #C3343C;
                 text-decoration: underline;
             }
         }
@@ -52,19 +50,20 @@
             h1{
                 font-size: 36px;
                 font-weight: 500;
-                color: #000000;
+                color: #3B3B3B;
                 font-family: Baskerville;
+                padding-bottom: 30px;
             }
             h6{
                 font-size: 20px;
-                color: #8B8B8F;
-                padding-top: 50px;
+                color: #3B3B3B;
                 font-family: Muli;
             }
             h5{
                 font-size: 20px;
-                color: #282829;
+                color: #707071;
                 font-family: Muli;  
+                padding-bottom: 20px;
             }
             .button{
                 margin-top: 40px;
@@ -76,10 +75,11 @@
                 font-size: 20px;
                 font-family: Muli;
                 padding: 8px 25px;
-                &:hover{
+                color: #0D0D0D;
+                a:hover{
                     background-color: #C3343C;
-                    color: #FFFFFF;
-                    border: 2px solid #FFFFFF;
+                    color: #FFFFFF!important;
+                    //border: 2px solid #FFFFFF;
                 }
                 a{
                     color: #0D0D0D;
@@ -99,8 +99,8 @@
                 }
                 p{
                     font-size: 16px;
-                    color: #282829;
-                    padding-top: 35px;
+                    color: #707071;
+                    //padding-top: 35px;
                     line-height: 45px;
                     font-family: Muli;
                 }
@@ -157,6 +157,7 @@
                 }
                 p{
                     font-size: 20px;
+                    color: #707071;
                     padding-top: 35px;
                     line-height: 45px;
                 }
