--- a/src/app/modules/services/components/usability-testing/usability-testing.component.html
+++ b/src/app/modules/services/components/usability-testing/usability-testing.component.html
@@ -20,7 +20,7 @@
                 </div>
             </div>
             <div class="col-md-6 right-layout">
-                <img src="./assets/images/services/image.png">
+              <img src="./assets/images/services/Asset15.svg">
             </div>
         </div>
     </div>
@@ -75,6 +75,19 @@
         </div>
       </div>
     </div>
+    <div class="service-layout4">
+      <div class="container">
+      <div class="row">
+          <div class="col-md-4">
+                  <h3>Exploratory Testing</h3>
+          </div>
+          <div class="col-md-8">
+                  <p>
+                    Researchers or Participants can browse through the website or application without any pre-planned tasks. The aim of the testing is mostly to uncover maximum usability issues with minimal time. This type of testing typically can be done in the early stages of product development and helps researchers pinpoint gaps in the market, identify potential new features, and workshop new ideas.</p>
+              </div>
+          </div>
+      </div>
+  </div>
     <div class="service-layout3">
       <div class="container">
           <div class="d-flex">
