--- a/src/app/modules/work/components/automobile-usability/automobile-usability.component.html
+++ b/src/app/modules/work/components/automobile-usability/automobile-usability.component.html
@@ -61,7 +61,7 @@
             <div class="col-md-6 left">
                 <h2>Other Case Studies</h2>
                 <div class="button">
-                    <div class="btn btnn">See All Works</div>
+                    <div class="btn btnn" routerLink="/services">See All Works</div>
                 </div>
             </div>
             <div class="col-md-6 right">
@@ -91,7 +91,7 @@
              <h2>Let's craft design together!</h2>
           </div>
              <div class="button">
-                 <div class="btn-white">Let's Talk</div>
+                 <div class="btn-white" routerLink="/contact-us">Let's Talk</div>
              </div>
         </div>
         </div>
