--- a/src/app/modules/work/components/automobile-usability/automobile-usability.component.scss
+++ b/src/app/modules/work/components/automobile-usability/automobile-usability.component.scss
@@ -4,12 +4,14 @@
 h2{
     font-size: 57px;
     font-family: Baskerville;
+    color: #3B3B3B;
     @include media-breakpoint-down(md) {
         font-size: 36px;
     }
 }
 p{
     font-size: 16px;
+    color: #3B3B3B;
     line-height: 30px;
     @include media-breakpoint-down(md) {
         font-size: 14px;
@@ -18,6 +20,7 @@ p{
 h6{
     font-size: 36px;
     font-family: Muli;
+    color: #3B3B3B;
     @include media-breakpoint-down(md) {
         font-size: 28px;
     }
@@ -25,7 +28,6 @@ h6{
     .banner{
         background-color: #6DAFD8;
         padding-top: 140px;
-       top: -100px;
        position: relative;
        //height: 830px;
        //padding: 350px 0px;
@@ -35,7 +37,6 @@ h6{
         }
     }
     .image-event{
-        margin-top: -100px;
         img{
             width: 100%;
         }
@@ -59,7 +60,7 @@ h6{
             font-family: Baskerville;
         }
         p{
-            font-size: 16px;
+            font-size: 20px;
             font-family: Muli;
             line-height: 50px;
         }
@@ -105,9 +106,14 @@ h6{
             border: 2px solid #FFFFFF;
             color: #FCFCFC;
              font-size: 18px;
-            padding: 8px;
+             padding: 10px 20px;
             border-radius: 0px;
             font-family: Muli;
+            cursor: pointer;
+            &:hover{
+                background-color: #FFFFFF;
+                color: #C3343C;
+            }
         }
         @include media-breakpoint-down(md){
             h2{
@@ -147,6 +153,7 @@ h6{
             cursor: pointer;
              font-size: 18px;
             font-family: Muli;
+            padding: 10px 15px;
             &:hover{
                 background-color: #C3343C;
                 color: #FFFFFF;
