--- a/src/app/modules/work/components/childcare-portal/childcare-portal.component.html
+++ b/src/app/modules/work/components/childcare-portal/childcare-portal.component.html
@@ -10,7 +10,7 @@
                 </div>
                 <div class="col-md-6 orderone">
                     <div class="container">
-                        <img src="./assets/images/works/Child1.png">
+                        <img src="./assets/images/works/child2.png">
                     </div>
                 </div>
             </div>
@@ -83,8 +83,8 @@
                   </svg>
                   
                 <h6>Target Audience</h6>
-                <p>Kids of age 6 - 12</p>
-                <p>Coordinators who takes care of kids</p>
+                <p>- Kids of age 6 - 12</p>
+                <p>- Coordinators who takes care of kids</p>
             </div>
             </div>
         </div>
@@ -138,7 +138,7 @@
             <div class="col-md-6 left">
                 <h2>Other Case Studies</h2>
                 <div class="button">
-                    <div class="btn btnn">See All Works</div>
+                    <div class="btn btnn" routerLink="/services">See All Works</div>
                 </div>
             </div>
             <div class="col-md-6 right">
@@ -168,7 +168,7 @@
              <h2>Let's craft design together!</h2>
           </div>
              <div class="button">
-                 <div class="btn-white">Let's Talk</div>
+                 <div class="btn-white" routerLink="/contact-us">Let's Talk</div>
              </div>
         </div>
         </div>
