--- a/src/app/modules/work/components/childcare-portal/childcare-portal.component.scss
+++ b/src/app/modules/work/components/childcare-portal/childcare-portal.component.scss
@@ -2,23 +2,26 @@
 @import '~bootstrap/scss/variables';
 @import '~bootstrap/scss/mixins';
 h2{
-    font-size: 57px;
+    font-size: 56px;
     font-family: Baskerville;
+    color: #3B3B3B;
     @include media-breakpoint-down(md) {
         font-size: 36px;
     }
 }
 p{
-    font-size: 16px;
+    font-size: 20px;
     line-height: 30px;
     font-family: Muli;
+    color: #3B3B3B;
     @include media-breakpoint-down(md) {
         font-size: 14px;
     }
 }
 h6{
-    font-size: 36px;
+    font-size: 26px;
     font-family: Muli;
+    color: #3B3B3B;
     @include media-breakpoint-down(md) {
         font-size: 28px;
     }
@@ -26,13 +29,11 @@ h6{
     .banner{
         background-color: #FDDED8;
         padding-top: 140px;
-       top: -100px;
-       position: relative;
-       height: 830px;
+       height: 775px;
        padding: 350px 0px;
         h6{
             font-weight: 300;
-            margin-top: 30px;
+            margin-top: 40px;
         }
         img{
             position: absolute;
@@ -64,7 +65,6 @@ h6{
     .about-project{
         background-color: #FCFCFC;
         padding: 200px 0px;
-        margin-top: -100px;
         .row{
             padding-bottom: 50px;
             margin-right: 0;
@@ -118,7 +118,7 @@ h6{
         }
         hr.line{
             border-bottom: 5px solid #C3343C;
-            width: 48%;
+            width: 40%;
             text-align: left;
             margin-left: 0;
             margin-top: -7px;
@@ -182,9 +182,14 @@ h6{
             border: 2px solid #FFFFFF;
             color: #FCFCFC;
              font-size: 18px;
-            padding: 8px;
             border-radius: 0px;
             font-family: Muli;
+            padding: 10px 20px;
+            cursor: pointer;
+            &:hover{
+                background-color: #FFFFFF;
+                color: #C3343C;
+            }
         }
         @include media-breakpoint-down(md){
             h2{
@@ -290,7 +295,7 @@ h6{
             margin: 0 5px;
             width: 15px;
             height: 15px;
-            border: 2px solid #FFF;
+           // border: 2px solid #FFF;
             background-color: #D0D0D0 !important;
             text-indent: -999px;
             overflow: hidden;
