--- a/src/app/modules/work/components/construction-portal/construction-portal.component.html
+++ b/src/app/modules/work/components/construction-portal/construction-portal.component.html
@@ -119,11 +119,11 @@
                     </div>
                     <div class="needs-right">
                         <h6>Challenges</h6>
-                        <p>Preparing proposal presentation for every pitch</p>
-                        <p>Searching previous project details from huge repository</p>
-                        <p>Multiple version of presentations</p>
-                        <p>Access to required data spontaneously</p>
-                        <p>Interpretation of humongous numeric data</p>
+                        <p>- Preparing proposal presentation for every pitch</p>
+                        <p>- Searching previous project details from huge repository</p>
+                        <p>- Multiple version of presentations</p>
+                        <p>- Access to required data spontaneously</p>
+                        <p>- Interpretation of humongous numeric data</p>
                     </div>
                  </div>
             </div>
@@ -162,7 +162,7 @@
             <div class="col-md-6 left">
                 <h2>Other Case Studies</h2>
                 <div class="button">
-                    <div class="btn btnn">See All Works</div>
+                    <div class="btn btnn" routerLink="/services">See All Works</div>
                 </div>
             </div>
             <div class="col-md-6 right">
@@ -192,7 +192,7 @@
              <h2>Let's craft design together!</h2>
           </div>
              <div class="button">
-                 <div class="btn-white">Let's Talk</div>
+                 <div class="btn-white" routerLink="/contact-us">Let's Talk</div>
              </div>
         </div>
         </div>
