--- a/src/app/modules/work/components/event-management/event-management.component.scss
+++ b/src/app/modules/work/components/event-management/event-management.component.scss
@@ -4,6 +4,7 @@
 h2{
     font-size: 57px;
     font-family: Baskerville;
+    color: #3B3B3B;
     @include media-breakpoint-down(md) {
         font-size: 36px;
     }
@@ -11,6 +12,7 @@ h2{
 p{
     font-size: 16px;
     line-height: 30px;
+    color: #3B3B3B;
     @include media-breakpoint-down(md) {
         font-size: 14px;
     }
@@ -18,6 +20,7 @@ p{
 h6{
     font-size: 36px;
     font-family: Muli;
+    color: #3B3B3B;
     @include media-breakpoint-down(md) {
         font-size: 28px;
     }
@@ -26,10 +29,8 @@ h6{
     padding-top: 0px;
 }
     .banner{
-        background-color: #EBEBEB;
+        background-color: #FFEFEF;
        padding-top: 140px;
-       top: -100px;
-       position: relative;
        height: 830px;
        padding: 350px 0px;
         .banner-header{
@@ -38,7 +39,7 @@ h6{
         h6{
             font-weight: 300;
             font-size: 24px;
-            margin-top: 50px;
+            margin-top: 40px;
         }
         @include media-breakpoint-down(lg){
             .banner-header{
@@ -55,7 +56,6 @@ h6{
     .about-project{
         background-color: #FCFCFC;
         padding: 200px 0px;
-        margin-top: -100px;
         p{
             font-size: 18px;
             font-family: Muli;
@@ -84,10 +84,10 @@ h6{
     }
     .approach{
         background-color: #EBEBEB;
-        color: #000000;
+        color: #3B3B3B;
         padding: 200px 0px;
         p{
-            font-size: 18px;
+            font-size: 20px;
             font-family: Muli;
             line-height: 50px;
         }
@@ -223,17 +223,23 @@ h6{
         }
     }
  .work-description{
-        padding: 100px 0px;
+        padding: 100px 0px 150px;
         color: #3D3D3D;
-        background-color: #FAFAFA;
+        //background-color: #FAFAFA;
         h6{
             line-height: 55px;
-            margin-top: 55px;
+            margin-top: 40px;
             font-family: Baskerville;
+            font-size: 36px;
+        }
+        h5{
+            font-size: 20px;
+            font-family: Muli;
         }
         P{
              font-size: 18px;
             font-family: Muli;
+            line-height: 35px;
         }
         @include media-breakpoint-down(lg){
             padding: 80px 0px;
@@ -247,9 +253,6 @@ h6{
             h6{
                font-size: 28px;
             }
-            // p{
-            //    font-size: 24px;
-            // }
         }
         @include media-breakpoint-down(sm){
             padding: 40px 0px;
@@ -304,9 +307,14 @@ h6{
             border: 2px solid #FFFFFF;
             color: #FCFCFC;
             font-size: 20px;
-            padding: 8px;
             border-radius: 0px;
             font-family: Muli;
+            padding: 10px 20px;
+            cursor: pointer;
+            &:hover{
+                background-color: #FFFFFF;
+                color: #C3343C;
+            }
         }
         @include media-breakpoint-down(md){
             h2{
@@ -399,7 +407,7 @@ h6{
             margin: 0 5px;
             width: 15px;
             height: 15px;
-            border: 2px solid #FFF;
+            //border: 2px solid #FFF;
             background-color: #D0D0D0 !important;
             text-indent: -999px;
             overflow: hidden;
@@ -432,6 +440,7 @@ h6{
         cursor: pointer;
          font-size: 18px;
         font-family: Muli;
+        padding: 10px 15px;
         &:hover{
             background-color: #C3343C;
             color: #FFFFFF;
