--- a/src/app/modules/work/components/health-care/health-care.component.scss
+++ b/src/app/modules/work/components/health-care/health-care.component.scss
@@ -4,7 +4,7 @@
 h2{
     font-size: 57px;
     font-family: Baskerville;
-    color: #000000;
+    color: #3B3B3B;
     @include media-breakpoint-down(md) {
         font-size: 36px;
     }
@@ -12,7 +12,7 @@ h2{
 p{
     font-size: 18px;
     font-family: Muli;
-    color: #000000;
+    color: #3B3B3B;
     @include media-breakpoint-down(md) {
         font-size: 14px;
     }
@@ -20,16 +20,14 @@ p{
 h6{
     font-size: 24px;
     font-family: Muli;
-    color: #000000;
+    color: #3B3B3B;
     @include media-breakpoint-down(md) {
         font-size: 28px;
     }
 }  
     .banner{
-        background-color: #94D5BD;
+        background-color: #E4F0EC;
         padding-top: 140px;
-        top: -100px;
-        position: relative;
         height: 830px;
         padding: 350px 0px;
         img{
@@ -68,7 +66,6 @@ h6{
     .about-project{
         background-color: #FCFCFC;
         padding: 200px 0px;
-        margin-top: -100px;
         p{
              font-size: 18px;
             line-height: 40px;
@@ -98,7 +95,7 @@ h6{
         background-color: #EBEBEB;
         padding: 200px 0px;
         p{
-            font-size: 18px;
+            font-size: 20px;
             font-family: Muli;
             line-height: 50px;
         }
@@ -130,7 +127,7 @@ h6{
         p{
              font-size: 18px;
             font-family: Muli;
-            line-height: 40px;
+            line-height: 35px;
         }
         @include media-breakpoint-down(sm){
             padding: 80px 0px;
@@ -262,9 +259,6 @@ h6{
             h6{
                font-size: 28px;
             }
-            // p{
-            //    font-size: 24px;
-            // }
         }
         @include media-breakpoint-down(sm){
             padding: 40px 0px;
@@ -281,17 +275,21 @@ h6{
     .work-description2{
         padding: 80px 0px;
         color: #3D3D3D;
-        background-color: #FAFAFA;
+        //background-color: #FAFAFA;
         h6{
-            font-size: 36px;
-            font-family: Baskerville;
             line-height: 55px;
-            margin-top: 150px;
+            margin-top: 40px;
+            font-family: Baskerville;
+            font-size: 36px;
         }
-        p{
-            line-height: 40px;
+        h5{
+            font-size: 20px;
             font-family: Muli;
+        }
+        P{
              font-size: 18px;
+            font-family: Muli;
+            line-height: 35px;
         }
         @include media-breakpoint-down(lg){
             padding: 80px 0px;
@@ -305,9 +303,6 @@ h6{
             h6{
                font-size: 28px;
             }
-            // p{
-            //    font-size: 24px;
-            // }
         }
         @include media-breakpoint-down(sm){
             padding: 60px 0px 100px 0;
@@ -406,6 +401,7 @@ h6{
             line-height: 50px;
             font-size: 36px;
             font-family: Baskerville;
+            margin-top: 60%;
         }
          p{
             line-height: 40px;
@@ -505,7 +501,7 @@ h6{
             margin: 0 5px;
             width: 15px;
             height: 15px;
-            border: 2px solid #FFF;
+            //border: 2px solid #FFF;
             background-color: #D0D0D0 !important;
             text-indent: -999px;
             overflow: hidden;
@@ -547,9 +543,14 @@ h6{
             border: 2px solid #FFFFFF;
             color: #FCFCFC;
              font-size: 18px;
-            padding: 8px;
+             padding: 10px 20px;
             border-radius: 0px;
             font-family: Muli;
+            cursor: pointer;
+            &:hover{
+                background-color: #FFFFFF;
+                color: #C3343C;
+            }
         }
         @include media-breakpoint-down(md){
             h2{
@@ -570,6 +571,7 @@ h6{
         cursor: pointer;
          font-size: 18px;
         font-family: Muli;
+        padding: 10px 15px;
         &:hover{
             background-color: #C3343C;
             color: #FFFFFF;
