--- a/src/app/modules/work/components/networking/networking.component.scss
+++ b/src/app/modules/work/components/networking/networking.component.scss
@@ -4,6 +4,7 @@
 h2{
     font-size: 56px;
     font-family: Baskerville;
+    color: #3B3B3B;
     @include media-breakpoint-down(md) {
         font-size: 36px;
     }
@@ -11,6 +12,7 @@ h2{
 p{
     font-size: 16px;
     line-height: 30px;
+    color: #3B3B3B;
     @include media-breakpoint-down(md) {
         font-size: 14px;
     }
@@ -18,6 +20,7 @@ p{
 h6{
     font-size: 36px;
     font-family: Muli;
+    color: #3B3B3B;
     @include media-breakpoint-down(md) {
         font-size: 28px;
     }
@@ -25,8 +28,6 @@ h6{
     .banner{
         background-color: #EBEBEB;
         padding-top: 140px;
-       top: -100px;
-       position: relative;
        height: 830px;
        padding: 350px 0px;
         img{
@@ -36,7 +37,7 @@ h6{
         h6{
             font-weight: 300;
             font-size: 24px;
-            margin-top: 50px;
+            margin-top: 40px;
         }
         @include media-breakpoint-down(lg){
             .banner-header{
@@ -59,7 +60,6 @@ h6{
     .about-project{
         background-color: #FCFCFC;
         padding: 200px 0px;
-        margin-top: -100px;
         p{
             font-size: 18px;
             font-family: Muli;
@@ -88,10 +88,10 @@ h6{
     }
     .approach{
         background-color: #EBEBEB;
-        color: #000000;
+        color: #3D3D3D;
         padding: 200px 0px;
         p{
-            font-size: 18px;
+            font-size: 20px;
             font-family: Muli;
             line-height: 50px;
         }
@@ -114,7 +114,7 @@ h6{
         h2{
             font-family: Baskerville;
             font-size: 36px;
-            color: #000000;
+            color: #3B3B3B;
         }
         @include media-breakpoint-down(sm){
             h2{
@@ -206,7 +206,7 @@ h6{
     }
     .design-system{
         padding: 60px 0px;
-        color: #000000;
+        color: #3B3B3B;
         background-color: #FCFCFC;
         p{
             font-family: Baskerville;
@@ -306,6 +306,11 @@ h6{
             padding: 8px;
             border-radius: 0px;
             font-family: Muli;
+            cursor: pointer;
+            &:hover{
+                background-color: #FFFFFF;
+                color: #C3343C;
+            }
         }
         @include media-breakpoint-down(md){
             h2{
@@ -398,7 +403,7 @@ h6{
             margin: 0 5px;
             width: 15px;
             height: 15px;
-            border: 2px solid #FFF;
+           // border: 2px solid #FFF;
             background-color: #D0D0D0 !important;
             text-indent: -999px;
             overflow: hidden;
@@ -431,6 +436,7 @@ h6{
         cursor: pointer;
         font-size: 20px;
         font-family: Muli;
+        padding: 10px 15px;
         &:hover{
             background-color: #C3343C;
             color: #FFFFFF;
