--- a/src/app/modules/work/components/skill-development/skill-development.component.scss
+++ b/src/app/modules/work/components/skill-development/skill-development.component.scss
@@ -4,21 +4,24 @@
 h2{
     font-size: 57px;
     font-family: Baskerville;
+    color: #3B3B3B;
     @include media-breakpoint-down(md) {
         font-size: 36px;
     }
 }
 p{
-    font-size: 16px;
+    font-size: 18px;
     line-height: 30px;
     font-family: Muli;
+    color: #3B3B3B;
     @include media-breakpoint-down(md) {
         font-size: 14px;
     }
 }
 h6{
-    font-size: 36px;
+    font-size: 26px;
     font-family: Muli;
+    color: #3B3B3B;
     @include media-breakpoint-down(md) {
         font-size: 28px;
     }
@@ -26,8 +29,6 @@ h6{
     .banner{
         background-color: #DDDDDD;
         padding-top: 140px;
-        top: -100px;
-        position: relative;
         height: 830px;
         padding: 350px 0px;
         img{
@@ -39,7 +40,7 @@ h6{
         }
         h6{
             font-weight: 300;
-            margin-top: 30px;
+            margin-top: 40px;
         }
         @include media-breakpoint-down(lg){
             .banner-header{
@@ -72,7 +73,6 @@ h6{
     .about-project{
         background-color: #FCFCFC;
         padding: 200px 0px;
-        margin-top: -100px;
         .row{
             margin-right: 0;
             margin-left: 0;
@@ -258,10 +258,19 @@ h6{
         color: #3D3D3D;
         background-color: #FAFAFA;
         h6{
-            font-size: 36px;
-            font-family: Baskerville;
             line-height: 55px;
-            margin-top: 150px;
+            margin-top: 40px;
+            font-family: Baskerville;
+            font-size: 36px;
+        }
+        h5{
+            font-size: 20px;
+            font-family: Muli;
+        }
+        P{
+             font-size: 18px;
+            font-family: Muli;
+            line-height: 35px;
         }
         @include media-breakpoint-down(lg){
             padding: 80px 0px;
@@ -329,9 +338,14 @@ h6{
             border: 2px solid #FFFFFF;
             color: #FCFCFC;
              font-size: 18px;
-            padding: 8px;
             border-radius: 0px;
             font-family: Muli;
+            padding: 10px 20px;
+            cursor: pointer;
+            &:hover{
+                background-color: #FFFFFF;
+                color: #C3343C;
+            }
         }
         @include media-breakpoint-down(md){
             h2{
@@ -371,6 +385,7 @@ h6{
             cursor: pointer;
             font-size: 20px;
             font-family: Muli;
+            padding: 10px 15px;
             &:hover{
                 background-color: #C3343C;
                 color: #FFFFFF;
@@ -437,7 +452,7 @@ h6{
             margin: 0 5px;
             width: 15px;
             height: 15px;
-            border: 2px solid #FFF;
+            //border: 2px solid #FFF;
             background-color: #D0D0D0 !important;
             text-indent: -999px;
             overflow: hidden;
