--- a/src/app/modules/work/components/uxahead/uxahead.component.scss
+++ b/src/app/modules/work/components/uxahead/uxahead.component.scss
@@ -4,6 +4,7 @@
 h2{
     font-size: 57px;
     font-family: Baskerville;
+    color: #3B3B3B;
     @include media-breakpoint-down(md) {
         font-size: 36px;
     }
@@ -11,13 +12,15 @@ h2{
 p{
     font-size: 16px;
     line-height: 30px;
+    color: #3B3B3B;
     @include media-breakpoint-down(md) {
         font-size: 14px;
     }
 }
 h6{
-    font-size: 36px;
+    font-size: 26px;
     font-family: Muli;
+    color: #3B3B3B;
     @include media-breakpoint-down(md) {
         font-size: 28px;
     }
@@ -25,13 +28,11 @@ h6{
     .banner{
         background-color: #F0DBDE;
         padding-top: 140px;
-       top: -100px;
-       position: relative;
        height: 830px;
        padding: 350px 0px;
         h6{
             font-weight: 300;
-            margin-top: 30px;
+            margin-top: 40px;
         }
         img{
             position: absolute;
@@ -64,7 +65,6 @@ h6{
     .about-project{
         background-color: #FCFCFC;
         padding: 200px 0px;
-        margin-top: -100px;
         .row{
             margin-right: 0;
             margin-left: 0;
@@ -107,7 +107,7 @@ h6{
         color: #000000;
         padding: 200px 0px;
         p{
-            font-size: 18px;
+            font-size: 20px;
             font-family: Muli;
             line-height: 50px;
         }
@@ -180,12 +180,18 @@ h6{
         background-color: #FAFAFA;
         h6{
             line-height: 55px;
-            margin-top: 55px;
+            margin-top: 40px;
             font-family: Baskerville;
+            font-size: 36px;
+        }
+        h5{
+            font-size: 20px;
+            font-family: Muli;
         }
         P{
-            font-size: 18px;
+             font-size: 18px;
             font-family: Muli;
+            line-height: 35px;
         }
         img{
             padding: 200px 125px;
@@ -261,9 +267,14 @@ h6{
             border: 2px solid #FFFFFF;
             color: #FCFCFC;
              font-size: 18px;
-            padding: 8px;
             border-radius: 0px;
             font-family: Muli;
+            padding: 10px 20px;
+            cursor: pointer;
+            &:hover{
+                background-color: #FFFFFF;
+                color: #C3343C;
+            }
         }
         @include media-breakpoint-down(md){
             h2{
@@ -303,6 +314,7 @@ h6{
             cursor: pointer;
             font-size: 20px;
             font-family: Muli;
+            padding: 10px 15px;
             &:hover{
                 background-color: #C3343C;
                 color: #FFFFFF;
@@ -369,7 +381,7 @@ h6{
             margin: 0 5px;
             width: 15px;
             height: 15px;
-            border: 2px solid #FFF;
+            //border: 2px solid #FFF;
             background-color: #D0D0D0 !important;
             text-indent: -999px;
             overflow: hidden;
